Add new TIL benchmark to tests